# openai_hackathon

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  chatgpt.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: public-api-contract.yml
clipmato/: __init__.py  api_support.py  config.py  dependencies.py  gui.py  orchestrator.py  pipeline.py  runtime.py  web.py
clipmato/agent_runs/: __init__.py  contracts.py  scheduler.py  service.py  storage.py  tooling.py
clipmato/agents/: __init__.py  description_generator.py  distributor.py  entity_extractor.py  script_writer.py  title_suggester.py
clipmato/api/: __init__.py  contracts.py  errors.py  idempotency.py
clipmato/cli/: gui.py  pipeline.py  ui.py  web.py
clipmato/governance/: __init__.py  policy.py  release_rollout.py  releases.py  storage.py
clipmato/prompts/: __init__.py  contracts.py  (+3 more)
docker/: entrypoint.sh
podcast_pipeline/: config.py  file_utils.py  gui.py  pipeline.py  services.py  steps.py  web.py  web_utils.py
scripts/: export_openapi.py  run_host_native.sh
tests/: test_agent_runs.py  test_api_contracts.py  test_api_v1.py  test_cli_web_unittest.py  test_event_log_service.py  test_eventing_api.py  test_file_io.py  test_frontend_pages.py  test_governance.py  test_local_ai_unittest.py  test_mcp_api.py  test_mcp_gateway_service.py  test_metadata.py  test_progress_status.py  test_project_context.py  test_project_presets.py  test_prompt_engine.py  test_record_queries.py  test_repository_conventions.py  test_runtime_settings.py  test_upload_router.py
(+168 files in other folders)
